matrix.md commit

--- a/source/_posts/矩阵论.md
+++ b/source/_posts/矩阵论.md
@@ -213,7 +213,7 @@ $$
 V_1 \dot{+} V_2 = \lbrace \alpha_1+\alpha_2 | \alpha_1\in V_1, \alpha_2\in V_2 \rbrace
 $$
 
-**Thm:** $V_1, V_2$是数域$P$上线性空间$V$的两个子空间, 则下列叙述等价:
+**Thm:** $V_1, V_2$ 是数域$P$上线性空间$V$的两个子空间, 则下列叙述等价:
 1. 和$V_1+V_2$是直和
 2. 和$V_1+V_2$中零向量表示唯一, 即若$\alpha_1+\alpha_2=0(\alpha_1\in V_1, \alpha_2\in V_2)$, 则$\alpha_1=0,\alpha_2=0$.
 3. $V_1\cap V_2=\lbrace0\rbrace$
@@ -227,7 +227,26 @@ $$
 上述结论可以推广至有 n 个子空间的直和.
 
 ## 线性空间的同构
+**同构:** $V, V^\prime$是数域$P$上的线性空间, 二者是同构的, 若存在**同构映射**$\sigma$:
+1. $\sigma(\alpha+\beta)=\sigma(\alpha)+\sigma(\beta)$
+2. $\sigma(k\alpha)=k\sigma(\alpha)$
 
+其中$\alpha,\beta\in V$, $k\in P$.
+
+**Thm:** 设$V, V^\prime$是数域$P$上的同构线性空间, 同构映射
+$$
+\sigma:V\rightarrow V^\prime
+$$
+则
+1. $\sigma(0)=0^\prime, 0^\prime$是$V^\prime$的零元.
+2. $\forall\alpha\in V, \sigma(-\alpha)=-\sigma(\alpha)$.
+3. 不改变线性组合 (线性组合的同构等于同构的线性组合)
+4. 不改变线性相关性 (线性相关的向量组同构后仍线性相关, 且是充要的)
+5. 不改变基 (一组基同构后仍然是基)
+
+注意: 分清楚原像和像
+
+{%label default@content%}
 
 
 # 线性映射与线性变换
