matrix.md commit

--- a/source/_posts/矩阵论.md
+++ b/source/_posts/矩阵论.md
@@ -97,8 +97,9 @@ $$s.t.\ g\cdot f = I_A,\quad f\cdot g = I_B$$
 2. 逆元唯一
 
 **凸集:** $V$是$P$上的线性空间, $W$是$V$的非空子集, 如$\forall \alpha, \beta\in W\ and\ \forall \lambda \in [0, 1]$成立$\lambda \alpha + (1-\lambda) \beta\in W$, 则$W$是凸集.
-
+{%note info%}
 注意: 抛开数域$P$谈线性空间$V$是没有意义的.
+{%endnote%}
 
 ### :cherry_blossom:线性相关
 **线性表示**(略)
@@ -134,7 +135,7 @@ $$\epsilon^{\prime}=\epsilon T$$
 $$T=(t_{ij})$$
 其中基 $\epsilon^\prime$ 是基 $\epsilon$ 通过转移矩阵 $T$ 变换而来的.
 
-**Thm:**过渡矩阵可逆.
+**Thm:** 过渡矩阵可逆.
 
 **坐标变换:** 
 $$\alpha=\epsilon X=\epsilon^\prime X^\prime$$
@@ -150,8 +151,9 @@ $$X^\prime = T^{-1} X$$
 **线性子空间:** 线性空间的一个非空子集对于加法和数乘同样封闭, 则称该子集为一个线性子空间.
 
 **Thm:** 线性空间中的非空子集是线性子空间等价于对加法和数乘封闭.
-
+{%note info%}
 注意: 线性空间的每个线性子空间都是凸集.
+{%endnote%}
 
 **(非)平凡子空间**: 零子空间和全空间(即 V )是平凡的, 其余子空间是非平凡的.
 
@@ -244,9 +246,17 @@ $$
 4. 不改变线性相关性 (线性相关的向量组同构后仍线性相关, 且是充要的)
 5. 不改变基 (一组基同构后仍然是基)
 
+{% note info%}
 注意: 分清楚原像和像
+{% endnote %}
 
-{%label default@content%}
+**Thm:**数域 P 上两个有限维线性空间同构的充要条件是它们的维数相同.
+
+{%note info%}
+正因同构, 且都与$P^n$同构, 因此$P^n$上的一些结论在同构空间也成立.
+{%endnote%}
+
+## 内积空间
 
 
 # 线性映射与线性变换
