--- a/source/_posts/矩阵论.md
+++ b/source/_posts/矩阵论.md
@@ -59,7 +59,7 @@ $$f:x\rightarrow f(x)$$
 - 一般无交换律
 
 **Thm:** 有映射$f_1:A\rightarrow B, f_2:B\rightarrow C, f_3:C\rightarrow D$:
-1. $f_3\cdot (f_2 \cdot f_1) = (f_3\cdot f_2)\cdot f_1$
+1. \\(f_3\cdot (f_2 \cdot f_1) = (f_3\cdot f_2)\cdot f_1\\)
 2. $f_1\cdot I_A = I_B\cdot f_1=f_1$
 
 **逆映射:** 
