--- a/source/_posts/矩阵论.md
+++ b/source/_posts/矩阵论.md
@@ -18,31 +18,31 @@ mathjax: true
 ## 预备知识: 集合, 映射, 数域
 ### :cherry_blossom:集合及其运算(略)
 ### :cherry_blossom:二元关系与等价关系
-**Descartes积:** $A, B\neq \phi$, 集合$\lbrace(a,b) | a\in A, b\in B\rbrace$称为$A$与$B$的Descartes积, 记作$A \times B$.
+**Descartes积:** \\(A, B\neq \phi\\), 集合\\(\lbrace(a,b) | a\in A, b\in B\rbrace\\)称为\\(A\\)与\\(B\\)的Descartes积, 记作\\(A \times B\\).
 $$
 A\times B = \lbrace(a,b) | a\in A, b\in B\rbrace
 $$
 
-**二元关系:** 子集$R$称为二元关系, 若
+**二元关系:** 子集\\(R\\)称为二元关系, 若
 $$
 R\subseteq A\times B
 $$
-$A$与$B$有二元关系$R$, 记作 $aRb$. $A\times A$的二元关系 简称为$A$上的二元关系.
+\\(A\\)与\\(B\\)有二元关系\\(R\\), 记作 \\(aRb\\). \\(A\times A\\)的二元关系 简称为\\(A\\)上的二元关系.
 
-**等价关系:** 集合$A$上的关系$R$满足:
-1. 自反性:$\forall a \in A \Rightarrow aRa$
-2. 对称性:$\forall a,b \in A, if\ aRb \Rightarrow bRa$
-3. 传递性:$\forall a, b, c \in A, if\ aRb, bRc \Rightarrow aRc$
+**等价关系:** 集合\\(A\\)上的关系\\(R\\)满足:
+1. 自反性:\\(\forall a \in A \Rightarrow aRa\\)
+2. 对称性:\\(\forall a,b \in A, if\ aRb \Rightarrow bRa\\)
+3. 传递性:\\(\forall a, b, c \in A, if\ aRb, bRc \Rightarrow aRc\\)
 
-**等价类:** $R$是$A$上的等价关系, $a \in A$, 称$[a]=\lbrace x | x\in A, xRa\rbrace$为$a$关于$R$的等价类.
+**等价类:** \\(R\\)是\\(A\\)上的等价关系, \\(a \in A\\), 称\\([a]=\lbrace x | x\in A, xRa\rbrace\\)为\\(a\\)关于\\(R\\)的等价类.
 
-**商集:** $A$的所有元素关于$R$的等价类集合 $A/R=\lbrace[a] | a\in A\rbrace$.
+**商集:** \\(A\\)的所有元素关于\\(R\\)的等价类集合\\(A/R=\lbrace[a] | a\in A\rbrace\\).
 
-**分类:** $B_i (i\in I) \subset A \wedge B_i \neq \phi$, 若 $A = \cup_{i\in I} B_i \wedge for\ \forall i, j\in I, i\neq j, B_i \cap B_j$, 则称${B_i}$是$A$的一个分类 (划分).
+**分类:** \\(B\_i (i\in I) \subset A \wedge B\_i \neq \phi\\), 若\\(A = \cup_{i\in I} B_i \wedge for\ \forall i, j\in I, i\neq j, B_i \cap B_j\\), 则称\\({B_i}\\)是\\(A\\)的一个分类 (划分).
 
 **Thm:**
-1. 集合A上的每个等价关系R都决定A的一个分类
-2. 集合A的一个分类都决定A上的一个等价关系
+1. 集合 A 上的每个等价关系 R 都决定 A 的一个分类
+2. 集合 A 的一个分类都决定 A 上的一个等价关系
 
 ### :cherry_blossom:映射
 描述两个集合的元素之间的关系. 映射的关系能用**有向图**很清楚地阐释.
@@ -55,18 +55,18 @@ $$f:x\rightarrow f(x)$$
 
 **相关定义**: 单映射, 满映射, 双映射, 映射相等.
 
-**映射乘积:** $A,B,C\neq \phi, f_1:A\rightarrow B, f_2:B\rightarrow C$, 则$f_1, f_2$确定的从$A$到$C$的映射$f_3:a\rightarrow f_2(f_1(a)), a\in A$称为$f_1, f_2$的乘积, 记为:$f_3 = f_2\cdot f_1$
+**映射乘积:** \\(A,B,C\neq \phi, f_1:A\rightarrow B, f_2:B\rightarrow C\\), 则\\(f_1, f_2\\)确定的从\\(A\\)到\\(C\\)的映射\\(f_3:a\rightarrow f_2(f_1(a)), a\in A\\)称为\\(f_1, f_2\\)的乘积, 记为:\\(f_3 = f_2\cdot f_1\\)
 - 一般无交换律
 
-**Thm:** 有映射$f_1:A\rightarrow B, f_2:B\rightarrow C, f_3:C\rightarrow D$:
+**Thm:** 有映射\\(f_1:A\rightarrow B, f_2:B\rightarrow C, f_3:C\rightarrow D\\):
 1. \\(f_3\cdot (f_2 \cdot f_1) = (f_3\cdot f_2)\cdot f_1\\)
-2. $f_1\cdot I_A = I_B\cdot f_1=f_1$
+2. \\(f_1\cdot I_A = I_B\cdot f_1=f_1\\)
 
 **逆映射:** 
 $$f:A\rightarrow B$$
 $$if\ \exists\ g:B\rightarrow A$$
 $$s.t.\ g\cdot f = I_A,\quad f\cdot g = I_B$$
-则称$g$为$f$的一个逆映射, 记为$f^{-1}$,此时$f$称为可逆映射.
+则称\\(g\\)为\\(f\\)的一个逆映射, 记为\\(f^{-1}\\),此时\\(f\\)称为可逆映射.
 
 **Thm:** 可逆映射的逆映射唯一.
 
@@ -77,7 +77,7 @@ $$s.t.\ g\cdot f = I_A,\quad f\cdot g = I_B$$
 ### :cherry_blossom:数域与代数运算
 **数域:** 包含0和1在内的数集, 满足对和差积商封闭.
 
-**代数运算:** 映射$\circ:A\times B\rightarrow C$, 其中所有集合非空. 若$A=B=C$, 则称为**二元运算**. 记为$a \circ b$.
+**代数运算:** 映射\\(\circ:A\times B\rightarrow C\\), 其中所有集合非空. 若$A=B=C$, 则称为**二元运算**. 记为$a \circ b$.
 
 ## 线性空间
 **线性空间:** 称$V$是$P$上的线性空间, 若$V$满足:
