--- a/source/_posts/矩阵论.md
+++ b/source/_posts/矩阵论.md
@@ -77,10 +77,10 @@ $$s.t.\ g\cdot f = I_A,\quad f\cdot g = I_B$$
 ### :cherry_blossom:数域与代数运算
 **数域:** 包含0和1在内的数集, 满足对和差积商封闭.
 
-**代数运算:** 映射\\(\circ:A\times B\rightarrow C\\), 其中所有集合非空. 若$A=B=C$, 则称为**二元运算**. 记为$a \circ b$.
+**代数运算:** 映射\\(\circ:A\times B\rightarrow C\\), 其中所有集合非空. 若\\(A=B=C\\), 则称为**二元运算**. 记为\\(a \circ b\\).
 
 ## 线性空间
-**线性空间:** 称$V$是$P$上的线性空间, 若$V$满足:
+**线性空间:** 称\\(V\\)是\\(P\\)上的线性空间, 若\\(V\\)满足:
 1. 加法可交换
 2. 加法可结合
 3. 有加法单位元 (0)
@@ -90,15 +90,15 @@ $$s.t.\ g\cdot f = I_A,\quad f\cdot g = I_B$$
 7. 数乘对加法的左分配
 8. 数乘对加法的右分配
 
-称$V$中的元素为 **向量** . 注意: 此处向量比线性代数中的n维向量更为广义. 例如$R^{n\times n}$是数域$P$上的一个线性空间, 再如一元多项式的全体组成的集合也是一个线性空间. 因此$V$中的 **"向量"** 也可以指矩阵等.
+称\\(V\\)中的元素为 **向量** . 注意: 此处向量比线性代数中的n维向量更为广义. 例如\\(R^{n\times n}\\)是数域\\(P\\)上的一个线性空间, 再如一元多项式的全体组成的集合也是一个线性空间. 因此\\(V\\)中的 **"向量"** 也可以指矩阵等.
 
-**Thm:** 若$V$是线性空间, 则:
+**Thm:** 若\\(V\\)是线性空间, 则:
 1. 零元唯一
 2. 逆元唯一
 
-**凸集:** $V$是$P$上的线性空间, $W$是$V$的非空子集, 如$\forall \alpha, \beta\in W\ and\ \forall \lambda \in [0, 1]$成立$\lambda \alpha + (1-\lambda) \beta\in W$, 则$W$是凸集.
+**凸集:** \\(V\\)是\\(P\\)上的线性空间, \\(W\\)是\\(V\\)的非空子集, 如\\(\forall \alpha, \beta\in W\ and\ \forall \lambda \in [0, 1]\\)成立\\(\lambda \alpha + (1-\lambda) \beta\in W\\), 则\\(W\\)是凸集.
 {%note info%}
-注意: 抛开数域$P$谈线性空间$V$是没有意义的.
+注意: 抛开数域\\(P\\)谈线性空间\\(V\\)是没有意义的.
 {%endnote%}
 
 ### :cherry_blossom:线性相关
@@ -114,16 +114,16 @@ $$s.t.\ g\cdot f = I_A,\quad f\cdot g = I_B$$
 
 **Thm:** 线性空间中单个向量线性相关等价于该向量为零向量; 一组 (个数大于1) 向量线性相关等价于其中一个向量是其余向量的线性组合.
 
-**Thm:** 线性空间中的向量组$\alpha_1,\dots,\alpha_r$线性无关, 并且可由向量组$\beta_1,\dots,\beta_s$线性表示, 则$r\leq s$.
+**Thm:** 线性空间中的向量组\\(\alpha_1,\dots,\alpha_r\\)线性无关, 并且可由向量组\\(\beta_1,\dots,\beta_s\\)线性表示, 则\\(r\leq s\\).
 
 **Thm:** 两个等价的线性无关向量组必含有相同个数的向量.
 
-**Thm:** 向量组$\alpha_1,\dots,\alpha_r$线性无关, 但向量组$\alpha_1,\dots,\alpha_r, \beta$线性相关, 则$\beta$可以被$\alpha_1,\dots,\alpha_r$唯一线性表示.
+**Thm:** 向量组\\(\alpha_1,\dots,\alpha_r\\)线性无关, 但向量组\\(\alpha_1,\dots,\alpha_r, \beta\\)线性相关, 则\\(\beta\\)可以被\\(\alpha_1,\dots,\alpha_r\\)唯一线性表示.
 
-**极大线性无关组:** 线性空间中的一组向量$\alpha_1,\dots,\alpha_s$中若存在$r$个线性无关的向量$\alpha_{i_1},\dots,\alpha_{i_r}$且$\alpha_1,\dots,\alpha_s$任意向量能被$\alpha_{i_1},\dots,\alpha_{i_r}$线性表示, 则称$\alpha_{i_1},\dots,\alpha_{i_r}$为向量$\alpha_1,\dots,\alpha_s$的一个极大无关组. 数$r$称为向量$\alpha_1,\dots,\alpha_s$的**秩**.
+**极大线性无关组:** 线性空间中的一组向量\\(\alpha_1,\dots,\alpha_s\\)中若存在\\(r\\)个线性无关的向量\\(\alpha_{i_1},\dots,\alpha_{i_r}\\)且\\(\alpha_1,\dots,\alpha_s\\)任意向量能被\\(\alpha_{i_1},\dots,\alpha_{i_r}\\)线性表示, 则称\\(\alpha_{i_1},\dots,\alpha_{i_r}\\)为向量\\(\alpha_1,\dots,\alpha_s\\)的一个极大无关组. 数\\(r\\)称为向量\\(\alpha_1,\dots,\alpha_s\\)的**秩**.
 
 ### :cherry_blossom:线性空间的维度
-**维度:** 线性空间若有 n 个线性无关的向量, 且再无更多的向量, 则$dim(V)=n$. 若总是可以找到任意多的线性无关向量, 则是**无限维**的.
+**维度:** 线性空间若有 n 个线性无关的向量, 且再无更多的向量, 则\\(dim(V)=n\\). 若总是可以找到任意多的线性无关向量, 则是**无限维**的.
 
 **Thm:** 线性空间 V 中有 n 个线性无关的向量, 且 V 中任意向量都可以被这个向量组线性表示, 则 V 的维度为 n.
 
@@ -133,7 +133,7 @@ $$s.t.\ g\cdot f = I_A,\quad f\cdot g = I_B$$
 **过渡矩阵:**
 $$\epsilon^{\prime}=\epsilon T$$
 $$T=(t_{ij})$$
-其中基 $\epsilon^\prime$ 是基 $\epsilon$ 通过转移矩阵 $T$ 变换而来的.
+其中基 \\(\epsilon^\prime\\) 是基 \\(\epsilon\\) 通过转移矩阵 \\(T\\) 变换而来的.
 
 **Thm:** 过渡矩阵可逆.
 
@@ -141,7 +141,7 @@ $$T=(t_{ij})$$
 $$\alpha=\epsilon X=\epsilon^\prime X^\prime$$
 $$\epsilon^{\prime}=\epsilon T$$
 $$\epsilon X=\epsilon T X^\prime$$
-由于$\epsilon$列向量线性无关, 因此
+由于\\(\epsilon\\)列向量线性无关, 因此
 $$X = T X^\prime$$
 或者
 $$X^\prime = T^{-1} X$$
@@ -158,7 +158,7 @@ $$X^\prime = T^{-1} X$$
 **(非)平凡子空间**: 零子空间和全空间(即 V )是平凡的, 其余子空间是非平凡的.
 
 **example:**
-$A\in R^{n\times n}$那么齐次方程组$Ax=0$的全部解向量构成 n 维线性空间的一个子空间. 即齐次线性方程组的解空间或矩阵$A$的核空间$N(A)$. 我们有结论:
+\\(A\in R^{n\times n}\\)那么齐次方程组\\(Ax=0\\)的全部解向量构成 n 维线性空间的一个子空间. 即齐次线性方程组的解空间或矩阵\\(A\\)的核空间\\(N(A)\\). 我们有结论:
 $$
 dim(N(A))=n-rank(A)
 $$
@@ -170,20 +170,20 @@ $$
 
 **Thm:** 若 W 是有限维线性空间 V 的子空间, 则 W 的一组基可以扩充为 V 的一组基.
 
-**张成空间:** 设$\alpha_1,\dots,\alpha_s$是数域 P 上线性空间 V 的一组向量, 有它们的所有线性组合构成的集合
+**张成空间:** 设\\(\alpha_1,\dots,\alpha_s\\)是数域 P 上线性空间 V 的一组向量, 有它们的所有线性组合构成的集合
 $$
 W =\lbrace k_1\alpha_1 + k_s\alpha_s | k_i\in P,i=1,\dots,s\rbrace
 $$
-是 V 的非空子集, 并且是 V 的子空间, W 即为$\alpha_1,\dots,\alpha_s$的张成空间, 记为
+是 V 的非空子集, 并且是 V 的子空间, W 即为\\(\alpha_1,\dots,\alpha_s\\)的张成空间, 记为
 $$
 L(\alpha_1,\dots,\alpha_s) 或 span(\alpha_1,\dots,\alpha_s)
 $$
 
 **Thm:** 
-1. $span(\alpha_1,\dots,\alpha_s)=span(\beta_1,\dots,\beta_t)\Leftrightarrow \alpha_1,\dots,\alpha_s$与$\beta_1,\dots,\beta_t$等价
-2. $dim(span(\alpha_1,\dots,\alpha_s))=rank(\alpha_1,\dots,\alpha_s)$且$span(\alpha_1,\dots,\alpha_s)$的基是向量组$\alpha_1,\dots,\alpha_s$的一个极大无关组.
+1. \\(span(\alpha_1,\dots,\alpha_s)=span(\beta_1,\dots,\beta_t)\Leftrightarrow \alpha_1,\dots,\alpha_s\\)与\\(\beta_1,\dots,\beta_t\\)等价
+2. \\(dim(span(\alpha_1,\dots,\alpha_s))=rank(\alpha_1,\dots,\alpha_s)\\)且\\(span(\alpha_1,\dots,\alpha_s)\\)的基是向量组\\(\alpha_1,\dots,\alpha_s\\)的一个极大无关组.
 
-**列空间(值域):** $A\in R^{m\times n}, A\doteq[\alpha_1,\dots,\alpha_n],\alpha_i\in R^m(i=1,\dots,n)$, 则$span(\alpha_1,\dots,\alpha_n)$是 m 维线性空间$R^{m}$的一个子空间, 即 A 的列空间 (值域).
+**列空间(值域):** \\(A\in R^{m\times n}, A\doteq[\alpha_1,\dots,\alpha_n],\alpha_i\in R^m(i=1,\dots,n)\\), 则\\(span(\alpha_1,\dots,\alpha_n)\\)是 m 维线性空间\\(R^{m}\\)的一个子空间, 即 A 的列空间 (值域).
 $$
 R(A)=\lbrace y | y=Ax,x\in R^n \rbrace
 $$
@@ -198,7 +198,7 @@ dim(N(A))+dim(R(A))=n
 $$
 
 ### :cherry_blossom:子空间的交与和
-**子空间的和:** $\lbrace\alpha_1+\alpha_2 | \alpha_1\in V_1, \alpha_2\in V_2\rbrace$
+**子空间的和:** \\(\lbrace\alpha_1+\alpha_2 | \alpha_1\in V_1, \alpha_2\in V_2\rbrace\\)
 
 **Thm:** 子空间的交与和仍是子空间.
 
@@ -215,11 +215,11 @@ $$
 V_1 \dot{+} V_2 = \lbrace \alpha_1+\alpha_2 | \alpha_1\in V_1, \alpha_2\in V_2 \rbrace
 $$
 
-**Thm:** $V_1, V_2$ 是数域$P$上线性空间$V$的两个子空间, 则下列叙述等价:
-1. 和$V_1+V_2$是直和
-2. 和$V_1+V_2$中零向量表示唯一, 即若$\alpha_1+\alpha_2=0(\alpha_1\in V_1, \alpha_2\in V_2)$, 则$\alpha_1=0,\alpha_2=0$.
-3. $V_1\cap V_2=\lbrace0\rbrace$
-4. $dim(V_1+V_2)=dim(V_1)+dim(V_2)$
+**Thm:** \\(V_1, V_2\\) 是数域\\(P\\)上线性空间\\(V\\)的两个子空间, 则下列叙述等价:
+1. 和\\(V_1+V_2\\)是直和
+2. 和\\(V_1+V_2\\)中零向量表示唯一, 即若\\(\alpha_1+\alpha_2=0(\alpha_1\in V_1, \alpha_2\in V_2)\\), 则\\(\alpha_1=0,\alpha_2=0\\).
+3. \\(V_1\cap V_2=\lbrace0\rbrace\\)
+4. \\(dim(V_1+V_2)=dim(V_1)+dim(V_2)\\)
 
 **Thm:** 设 U 是数域 P 上**有限维**线性空间 V 的一个子空间, 则存在 V 的一个子空间 W 使得
 $$
@@ -229,19 +229,19 @@ $$
 上述结论可以推广至有 n 个子空间的直和.
 
 ## 线性空间的同构
-**同构:** $V, V^\prime$是数域$P$上的线性空间, 二者是同构的, 若存在**同构映射**$\sigma$:
-1. $\sigma(\alpha+\beta)=\sigma(\alpha)+\sigma(\beta)$
-2. $\sigma(k\alpha)=k\sigma(\alpha)$
+**同构:** \\(V, V^\prime\\)是数域\\(P\\)上的线性空间, 二者是同构的, 若存在**同构映射**\\(\sigma\\):
+1. \\(\sigma(\alpha+\beta)=\sigma(\alpha)+\sigma(\beta)\\)
+2. \\(\sigma(k\alpha)=k\sigma(\alpha)\\)
 
-其中$\alpha,\beta\in V$, $k\in P$.
+其中\\(\alpha,\beta\in V\\), \\(k\in P\\).
 
-**Thm:** 设 $V, V^\prime$ 是数域$P$上的同构线性空间, 同构映射
+**Thm:** 设 \\(V, V^\prime\\) 是数域\\(P\\)上的同构线性空间, 同构映射
 $$
 \sigma:V\rightarrow V^\prime
 $$
 则
-1. $\sigma(0)=0^\prime, 0^\prime$ 是 $V^\prime$ 的零元.
-2. $\forall\alpha\in V, \sigma(-\alpha)=-\sigma(\alpha)$.
+1. \\(\sigma(0)=0^\prime, 0^\prime\\) 是 \\(V^\prime\\)的零元.
+2. \\(\forall\alpha\in V, \sigma(-\alpha)=-\sigma(\alpha)\\).
 3. 不改变线性组合 (线性组合的同构等于同构的线性组合)
 4. 不改变线性相关性 (线性相关的向量组同构后仍线性相关, 且是充要的)
 5. 不改变基 (一组基同构后仍然是基)
@@ -253,14 +253,14 @@ $$
 **Thm:** 数域 P 上两个有限维线性空间同构的充要条件是它们的维数相同.
 
 {%note info%}
-正因同构, 且都与 $P^n$ 同构, 因此 $P^n$ 上的一些结论在同构空间也成立.
+正因同构, 且都与 \\(P^n\\) 同构, 因此 \\(P^n\\) 上的一些结论在同构空间也成立.
 {%endnote%}
 
 ## 内积空间
 
 
 # 线性映射与线性变换
-# $\lambda$ 矩阵与矩阵的Jordan标准形
+# \\(\lambda\\( 矩阵与矩阵的Jordan标准形
 # 矩阵的因子分解
 # Hermite矩阵与正定矩阵
 # 范数与极限
