edit renderer to pandoc

--- a/source/_posts/矩阵论.md
+++ b/source/_posts/矩阵论.md
@@ -16,8 +16,8 @@ mathjax: true
 
 # 线性空间与内积空间
 ## 预备知识: 集合, 映射, 数域
-### :cherry_blossom:集合及其运算(略)
-### :cherry_blossom:二元关系与等价关系
+### 集合及其运算(略)
+### 二元关系与等价关系
 **Descartes积:** \\(A, B\neq \phi\\), 集合\\(\lbrace(a,b) | a\in A, b\in B\rbrace\\)称为\\(A\\)与\\(B\\)的Descartes积, 记作\\(A \times B\\).
 $$
 A\times B = \lbrace(a,b) | a\in A, b\in B\rbrace
@@ -44,7 +44,7 @@ $$
 1. 集合 A 上的每个等价关系 R 都决定 A 的一个分类
 2. 集合 A 的一个分类都决定 A 上的一个等价关系
 
-### :cherry_blossom:映射
+### 映射
 描述两个集合的元素之间的关系. 映射的关系能用**有向图**很清楚地阐释.
 
 记号: 
@@ -74,7 +74,7 @@ $$s.t.\ g\cdot f = I_A,\quad f\cdot g = I_B$$
 
 **变换:** 非空集合到自身的一个映射称为变换. 若是双映射则称为**一一变换**; 若是有限集合, 则该一一变换称为**置换**.
 
-### :cherry_blossom:数域与代数运算
+### 数域与代数运算
 **数域:** 包含0和1在内的数集, 满足对和差积商封闭.
 
 **代数运算:** 映射\\(\circ:A\times B\rightarrow C\\), 其中所有集合非空. 若\\(A=B=C\\), 则称为**二元运算**. 记为\\(a \circ b\\).
@@ -101,7 +101,7 @@ $$s.t.\ g\cdot f = I_A,\quad f\cdot g = I_B$$
 注意: 抛开数域\\(P\\)谈线性空间\\(V\\)是没有意义的.
 {%endnote%}
 
-### :cherry_blossom:线性相关
+### 线性相关
 **线性表示**(略)
 
 **线性组合**(略)
@@ -122,7 +122,7 @@ $$s.t.\ g\cdot f = I_A,\quad f\cdot g = I_B$$
 
 **极大线性无关组:** 线性空间中的一组向量\\(\alpha_1,\dots,\alpha_s\\)中若存在\\(r\\)个线性无关的向量\\(\alpha_{i_1},\dots,\alpha_{i_r}\\)且\\(\alpha_1,\dots,\alpha_s\\)任意向量能被\\(\alpha_{i_1},\dots,\alpha_{i_r}\\)线性表示, 则称\\(\alpha_{i_1},\dots,\alpha_{i_r}\\)为向量\\(\alpha_1,\dots,\alpha_s\\)的一个极大无关组. 数\\(r\\)称为向量\\(\alpha_1,\dots,\alpha_s\\)的**秩**.
 
-### :cherry_blossom:线性空间的维度
+### 线性空间的维度
 **维度:** 线性空间若有 n 个线性无关的向量, 且再无更多的向量, 则\\(dim(V)=n\\). 若总是可以找到任意多的线性无关向量, 则是**无限维**的.
 
 **Thm:** 线性空间 V 中有 n 个线性无关的向量, 且 V 中任意向量都可以被这个向量组线性表示, 则 V 的维度为 n.
@@ -147,7 +147,7 @@ $$X = T X^\prime$$
 $$X^\prime = T^{-1} X$$
 
 ## 线性子空间
-### :cherry_blossom:基本概念
+### 基本概念
 **线性子空间:** 线性空间的一个非空子集对于加法和数乘同样封闭, 则称该子集为一个线性子空间.
 
 **Thm:** 线性空间中的非空子集是线性子空间等价于对加法和数乘封闭.
@@ -197,7 +197,7 @@ $$
 dim(N(A))+dim(R(A))=n
 $$
 
-### :cherry_blossom:子空间的交与和
+### 子空间的交与和
 **子空间的和:** \\(\lbrace\alpha_1+\alpha_2 | \alpha_1\in V_1, \alpha_2\in V_2\rbrace\\)
 
 **Thm:** 子空间的交与和仍是子空间.
@@ -207,7 +207,7 @@ $$
 dim(V_1)+dim(V_2)=dim(V_1\cap V_2)+dim(V_1+V_2)
 $$
 
-### :cherry_blossom:子空间的直和
+### 子空间的直和
 首先指出: 直和是和的特殊形式
 
 **直和:**
