--- a/source/_posts/大二暑假.md
+++ b/source/_posts/大二暑假.md
@@ -5,6 +5,12 @@ tags: flag
 category: Life
 ---
 
+"一手好牌打得稀烂."
+
+"所以我选择去赌."
+
+<!--more-->
+
 # 复盘这个学期
 总之, 先说一下这个学期的概况吧.
 
@@ -25,6 +31,7 @@ category: Life
 然后我打算离开人工智能专业, 前往吴院的歧视链底层专业--计算机. 我觉得需要一些新鲜的东西来刺激我. 可能是我不理解人工智能, 但我确实无法理解更深. 在表面徘徊不如去找点乐子. 然后计算机就是一片海啊. 虽然极大的可能性保不了研了, 但我必须去找我感兴趣的方向 (至少是目前感兴趣) 然后去钻研它们. 就目前而言, 我更希望未来充满不确定, 以便说服我自己, 机会还有很多. 也就是, 赌.
 
 当然这个暑假
+
 - 国际交流
 - 自学一些东西
 - 没了, 没计划了, 也没时间了
